[package]
name = "rediscbor"
version = "99.99.990"
authors = ["Michaël Catanzariti"]
edition = "2021"
description = "CBOR data type for Redis"
repository = "https://github.com/RedisCBOR/RedisCBOR"
readme = "README.md" 
license-file = "LICENSE"
keywords = ["redis", "cbor", "plugin"]
categories = ["database-implementations"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "recbor"

[dev-dependencies]
serial_test = "1.0"
env_logger = "0.10"

[dependencies]
libc = "0.2"
cbor-data = "0.8"
cborpath = "0.3"
redis-module = { version="1.0", features = ["experimental-api"]}